# crabgraph

./: Cargo.toml  codecov.yml  crates.js  help.html  index.html  rustfmt.toml  settings.html  src-files.js
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  fuzz.yml  release.yml
crabgraph/: all.html  constant.VERSION.html  index.html  sidebar-items.js
crabgraph/aead/: index.html  sidebar-items.js  struct.Ciphertext.html
crabgraph/aead/aead_trait/: index.html  sidebar-items.js  trait.CrabAead.html
crabgraph/aead/aes_gcm/: index.html  struct.AesGcm128.html  struct.AesGcm256.html
crabgraph/aead/chacha20poly1305/: index.html  struct.ChaCha20Poly1305.html
crabgraph/aead/serde_bytes_base64/: fn.deserialize.html  fn.serialize.html  index.html
crabgraph/aead/stream/: constant.DEFAULT_CHUNK_SIZE.html  constant.MAX_CHUNK_SIZE.html  index.html  sidebar-items.js  struct.Aes256GcmStreamDecryptor.html  struct.Aes256GcmStreamEncryptor.html  struct.ChaCha20Poly1305StreamDecryptor.html  struct.ChaCha20Poly1305StreamEncryptor.html  type.AesStreamNonce.html  (+1 more)
crabgraph/asym/: index.html  sidebar-items.js
crabgraph/encoding/: fn.base64_decode.html  fn.base64_encode.html  fn.base64_url_decode.html  fn.base64_url_encode.html  fn.hex_decode.html  fn.hex_encode.html  index.html  sidebar-items.js
crabgraph/errors/: enum.CrabError.html  index.html  sidebar-items.js  type.CrabResult.html
crabgraph/hash/: fn.blake2b_512.html  fn.blake2b_512_hex.html  fn.blake2s_256.html  fn.blake2s_256_hex.html  fn.blake3_hash.html  fn.blake3_hasher.html  fn.blake3_hex.html  fn.sha256.html  fn.sha256_hex.html  fn.sha384.html  fn.sha384_hex.html  fn.sha3_256.html  fn.sha3_256_hex.html  fn.sha3_512.html  fn.sha3_512_hex.html  fn.sha512.html  fn.sha512_hex.html  index.html  sidebar-items.js  type.Blake2b512Digest.html  type.Blake2s256Digest.html  type.Blake3Digest.html  type.Sha256Digest.html  type.Sha384Digest.html  type.Sha3_256Digest.html  type.Sha3_512Digest.html  type.Sha512Digest.html
crabgraph/kdf/: index.html  sidebar-items.js
crabgraph/key_rotation/: index.html  sidebar-items.js  struct.KeyRotationManager.html  struct.VersionedKey.html  trait.RotatableAead.html
crabgraph/kw/: index.html  sidebar-items.js  struct.Kw128.html  struct.Kw192.html  struct.Kw256.html
crabgraph/mac/: fn.hmac_sha256.html  fn.hmac_sha256_verify.html  fn.hmac_sha512.html  fn.hmac_sha512_verify.html  index.html  sidebar-items.js  type.HmacSha256.html  type.HmacSha512.html  type.HmacTag256.html  type.HmacTag512.html
crabgraph/prelude/: index.html
crabgraph/rand/: fn.fill_secure_bytes.html  fn.generate_key_128.html  fn.generate_key_256.html  fn.secure_bytes.html  index.html  sidebar-items.js
crabgraph/secrets/: index.html  sidebar-items.js  struct.SecretArray.html  struct.SecretVec.html
crabgraph/tls/: fn.install_default.html  fn.provider.html  fn.try_install_default.html  index.html  sidebar-items.js  static.ALL_CIPHER_SUITES.html  static.ALL_KX_GROUPS.html  static.TLS12_CIPHER_SUITES.html  static.TLS13_AES_128_GCM_SHA256.html  static.TLS13_AES_256_GCM_SHA384.html  static.TLS13_CHACHA20_POLY1305_SHA256.html  static.TLS13_CIPHER_SUITES.html  static.TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256.html  static.TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384.html  static.TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256.html  static.TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256.html  static.TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384.html  static.TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256.html  struct.SECP256R1.html  struct.SECP384R1.html  struct.X25519.html
crabgraph/utils/: fn.constant_time_eq.html  index.html  sidebar-items.js
examples/: key_wrapping_example.rs
search.index/: 016b07aea796.js  0201e470c96a.js  02840c75a603.js  04793cfbc521.js  068bf14d2785.js  06b5de8612fb.js  08266e557ded.js  09cc0db8e4f9.js  0be4e3187a37.js  0d4dc891307e.js  0dc97b0b7aa5.js  0e8b412dabe4.js  0ff079108110.js  10aab0d458ad.js  10ffd3fe07b8.js  11e51a0b6f70.js  1379e58f3168.js  13ff06c61587.js  1672f4402ab0.js  1805857b623a.js  1b4243c4bdfc.js  1d8a6d4dcba0.js  1e5eedfab841.js  2227ccc25767.js  2328a87a0ca0.js  23da543daadd.js  242a35baa1d4.js  26dc13b6b719.js  2746ed6c3b00.js  284d1723cb9f.js  28584449dcd3.js  28be34cd6a44.js  28d3d2c8ad56.js  28e3ef1c6fa4.js  2a272b291ce5.js  2d2fb4316a8a.js  3720d8597b1a.js  3838839553b7.js  388c78bcfbab.js  3c2958d96e5e.js  (+64 more)
search.index/crateNames/: d5a2d1b19499.js
search.index/desc/: a4873d9e0b85.js
search.index/entry/: e4ed8b2cce6f.js
search.index/function/: ea070ff4ad73.js
search.index/generic_inverted_index/: a51c5361324f.js
search.index/name/: 67b7fb3748bc.js
search.index/normalizedName/: 5503917597cf.js
search.index/path/: 5bbe3abb588f.js
search.index/type/: 19b69ec20e40.js
src/aead/: aes_gcm.rs  chacha20poly1305.rs  mod.rs  stream.rs
src/asym/: ed25519.rs  p256.rs  p384.rs  x25519.rs
src/crabgraph/: errors.rs.html  lib.rs.html
src/key_rotation/: mod.rs
src/tls/: aead.rs  hmac.rs  key_provider.rs  signature.rs  tls12.rs  tls13.rs
tests/: integration.rs
trait.impl/aead/: trait.Buffer.js
trait.impl/rustls_pki_types/: trait.SignatureVerificationAlgorithm.js
trait.impl/zeroize/: trait.Zeroize.js
type.impl/std/: primitive.array.js
(+275 files in other folders)
